Update 6.17 *args, **kwargs, unpacking.md

--- a/Today I learned/6.17 *args, **kwargs, unpacking.md
+++ b/Today I learned/6.17 *args, **kwargs, unpacking.md
@@ -97,6 +97,9 @@ we can see that **kwargs are stored in a dictionary
 
 # Other ways to use *
 ## unpacking
+
+*unpacking object can be used to any iterable object.
+
 ### <em>Example 1</em>
 ```py
 lst1 = [1,2,3]
