Update 6.17 *args, **kwargs, unpacking.md

--- a/Today I learned/6.17 *args, **kwargs, unpacking.md
+++ b/Today I learned/6.17 *args, **kwargs, unpacking.md
@@ -141,3 +141,40 @@ addition(**random_dic)
 ```py
 25
 ```
+
+# Good to know
+
+if there is a function like this,
+```py
+def calculate_sum(*num):
+    result = 0
+    for each in num:
+        result += each
+    return result
+```
+
+And we have a list,
+```py
+lst1 = [1,2,3,4,5]
+```
+
+In order to pass this `lst1` into this function,
+
+we need to write like this.
+
+```py
+calculate_sum(*lst1)
+```
+Because `calculate_sum()` function does not take a list, and we need to unpack the list first
+
+To find out, 
+
+```py
+print(*lst1)                            #1 2 3 4 5
+```
+
+So if we pass this `1 2 3 4 5` into `calculate_sum()` we will get the expected result like
+
+```py
+calculate_sum(1,2,3,4,5)
+```
