--- a/Today I learned/6.21 namespaces.md
+++ b/Today I learned/6.21 namespaces.md
@@ -99,31 +99,66 @@ I will introduce myself, my name is Jin
 ```
 Notice that there is `{'name': 'Jin'}` which is a namespace for `introduce_myself()` function.
 
-# <em>Enclosing namespaces</em>
+# <em>Enclosing namespaces or Enclosed namespaces</em>
 
+In the previous example, we took a look at local namespaces.
+
+Here, we will take a look at enclosing namespaces.
+
+Enclosing and enclosed namespaces are generated when a function nests another function inside.
+
+<em>Example for enclosed namespaces</em>
 ```py
-def outer_function():
-    outer_value = "outer"
-    print(locals())
-    def inner_function():
-        
-        inner_value = "inner"
-        
-        print(locals())
+def introduce_myself(name):
+    print(f"I will introduce myself, my name is {name}")
     
-    inner_function()
+    #print local namespaces for introduce_myself()
     print(locals())
     
+    def will_he_be_successful(passion_level):
+        if passion_level > 80:
+            print("Yes")
+        elif 80 >= passion_level > 60:
+            print("Maybe")
+        else:
+            print("No")
     
-outer_function()
+    will_he_be_successful(90)
+    
+    print(locals())
+
+#we have to call this function to see local namespaces for introduce_myself()    
+introduce_myself("Jin")
 ```
-In above example,
 
-We can see that `outer_function()` nests another function called `inner_function()`.
+And we get
 
-`outer_function()` serves a role of enclosing function and `inner_function()` serves a role of enclosed function.
+```
+I will introduce myself, my name is Jin
+{'name': 'Jin'}
+Yes
+{'name': 'Jin', 'will_he_be_successful': <function introduce_myself.<locals>.will_he_be_successful at 0x0000029C5DE89AF0>}
+```
 
+In above example <em>enclosed namespace</em>,
 
+We can see that `introduce_myself()` nests another function called `will_he_be_successful()`.
+
+`introduce_myself()` serves a role of enclosing function and `will_he_be_successful()` serves a role of enclosed function.
+
+```
+Outer function = enclosing function.
+Inner function = enclosed function.
+
+Namespaces for outer function = enclosing namespaces
+Namespaces for inner function = enclosed namespaces
+```
+
+Since `enclosing()` function doesn't exist, we use `print(locals())` to figure out enclosed namespaces.
+
+First time we print `locals()`, we have only `{'name': 'Jin'}`, 
+
+and the second time we print `locals()`, we have `{'name': 'Jin', 'will_he_be_successful': <function introduce_myself.<locals>.will_he_be_successful at 0x0000029C5DE89AF0>}`
 
 # NameError is raised when variables are not found in the right hierarchy
 
