--- a/Today I learned/6.21 namespaces.md
+++ b/Today I learned/6.21 namespaces.md
@@ -84,20 +84,23 @@ We can notice that there is `'global_variable': 'Hello I am a global namespace o
 # <em>Local namespaces</em>
 ```py
 def introduce_myself(name):
-    print(f"I will introduce myself, my name is {name}")
+    age = 99
+    print(f"I will introduce myself, my name is {name} and I am {age} years old.")
     
     #print local namespaces for introduce_myself()
-    print(locals())
+    print(f"Local namespaces for introduce_myself : {locals()}")
 
 #we have to call this function to see local namespaces for introduce_myself()    
 introduce_myself("Jin")
 ```
 And we get
 ```
-I will introduce myself, my name is Jin
-{'name': 'Jin'}
+I will introduce myself, my name is Jin and I am 99 years old.
+Local namespaces for introduce_myself : {'name': 'Jin', 'age': 99}
 ```
-Notice that there is `{'name': 'Jin'}` which is a namespace for `introduce_myself()` function.
+Notice that there is `{'name': 'Jin', 'age':99}` which is a namespace for `introduce_myself()` function.
+
+'name' was defined when we called the function(as an argument), and 'age' was defined as local variable inside the function.
 
 # <em>Enclosing namespaces or Enclosed namespaces</em>
 
@@ -110,10 +113,11 @@ Enclosing and enclosed namespaces are generated when a function nests another fu
 <em>Example for enclosed namespaces</em>
 ```py
 def introduce_myself(name):
-    print(f"I will introduce myself, my name is {name}")
+    age = 99
+    print(f"I will introduce myself, my name is {name} and I am {age} years old.")
     
     #print local namespaces for introduce_myself()
-    print(locals())
+    print(f"Local namespaces for introduce_myself without enclosed function: {locals()}")
     
     def will_he_be_successful(passion_level):
         if passion_level > 80:
@@ -122,22 +126,29 @@ def introduce_myself(name):
             print("Maybe")
         else:
             print("No")
+        print(f"\nEnclosed namespace for will_he_be_successful() : {locals()}")
     
-    will_he_be_successful(90)
+    #we must call function to see local variables
+    will_he_be_successful(80)
     
-    print(locals())
-
-#we have to call this function to see local namespaces for introduce_myself()    
+    print(f"\nEnclosing namespaces for introduce_myself() : {locals()}")
+    
+    
+#we must call this function to see local namespaces for introduce_myself()    
 introduce_myself("Jin")
 ```
 
 And we get
 
 ```
-I will introduce myself, my name is Jin
-{'name': 'Jin'}
-Yes
-{'name': 'Jin', 'will_he_be_successful': <function introduce_myself.<locals>.will_he_be_successful at 0x0000029C5DE89AF0>}
+I will introduce myself, my name is Jin and I am 99 years old.
+Local namespaces for introduce_myself without enclosed function: {'name': 'Jin', 'age': 99}
+Maybe
+
+Enclosed namespace for will_he_be_successful() : {'passion_level': 80}  #local namespace for will_he_be_successful()
+
+Enclosing namespaces for introduce_myself() : {'name': 'Jin', 'age': 99, 
+'will_he_be_successful': <function introduce_myself.<locals>.will_he_be_successful at 0x0000029C5E4BCD30>}
 ```
 
 In above example <em>enclosed namespace</em>,
@@ -154,11 +165,12 @@ Namespaces for outer function = enclosing namespaces
 Namespaces for inner function = enclosed namespaces
 ```
 
-Since `enclosing()` function doesn't exist, we use `print(locals())` to figure out enclosed namespaces.
+Since `enclosing()` function doesn't exist, we use `print(locals())` to figure out enclosing/enclosed namespaces.
 
-First time we print `locals()`, we have only `{'name': 'Jin'}`, 
+First time we print `locals()`, we have only `{'name': 'Jin', 'age': 99}`, which is local namespace without enclosed function.
 
-and the second time we print `locals()`, we have `{'name': 'Jin', 'will_he_be_successful': <function introduce_myself.<locals>.will_he_be_successful at 0x0000029C5DE89AF0>}`
+and the second time we print `locals()`, we have `{'name': 'Jin', 'age': 99, 
+'will_he_be_successful': <function introduce_myself.<locals>.will_he_be_successful at 0x0000029C5DE89AF0>}`
 
 # NameError is raised when variables are not found in the right hierarchy
 
