--- a/Today I learned/6.21 namespaces.md
+++ b/Today I learned/6.21 namespaces.md
@@ -162,7 +162,7 @@ Outer function = enclosing function.
 Inner function = enclosed function.
 
 Namespaces for outer function = enclosing namespaces
-Namespaces for inner function = enclosed namespaces
+Namespaces for inner function = enclosed namespaces = local namespaces
 ```
 
 Since `enclosing()` function doesn't exist, we use `print(locals())` to figure out enclosing/enclosed namespaces.
