--- a/Today I learned/6.21 namespaces.md
+++ b/Today I learned/6.21 namespaces.md
@@ -185,3 +185,24 @@ print(local_variable)
 ```diff
 - NameError: name 'local_variable' is not defined
 ```
+
+Let's take a look at this example
+
+<em>global namespaces and local namespaces</em>
+```py
+x = 10
+y = 15
+print(globals())
+
+def addition(a,b):
+    c = a + b
+    return c
+addition(1,2)
+print(globals())
+```
+And we get
+```
+{'x': 10, 'y': 15}
+{'x': 10, 'y': 15, 'addition': <function addition at 0x0000029C5E4BCB80>}
+```
+Variable `c` exists only in local namespace, not in global namespaces.
