--- a/Today I learned/6.21 namespaces.md
+++ b/Today I learned/6.21 namespaces.md
@@ -186,7 +186,7 @@ print(local_variable)
 - NameError: name 'local_variable' is not defined
 ```
 
-Let's take a look at this example
+# Let's take a look at these examples
 
 <em>global namespaces and local namespaces</em>
 ```py
@@ -206,3 +206,21 @@ And we get
 {'x': 10, 'y': 15, 'addition': <function addition at 0x0000029C5E4BCB80>}
 ```
 Variable `c` exists only in local namespace, not in global namespaces.
+
+<em>local namespaces</em>
+
+```py
+def introduce_stocks(name, price):
+    Is_buy = False
+    report = f"\tname : {name}\n\tprice : {price}\n\tShould I buy? : {Is_buy}"
+    print(f"-report- \n{report}")
+    print(locals())
+introduce_stocks("APPL",50)
+```
+```
+-report- 
+	name : APPL
+	price : 50
+	Should I buy? : False
+{'name': 'APPL', 'price': 50, 'Is_buy': False, 'report': '\tname : APPL\n\tprice : 50\n\tShould I buy? : False'}
+```
