Update and rename 6.21 namespaces.md to 6.21 namespaces, scopes, NameError.md

--- a/Today I learned/6.21 namespaces, scopes, NameError.md
+++ b/Today I learned/6.21 namespaces, scopes, NameError.md
@@ -1,6 +1,6 @@
 # 6/21 Today I learned...
 
-# Namespaces, NameError is raised when variables are not found in the right hierarachy
+# Namespaces, Scopes, NameError is raised when variables are not found in the right hierarachy
 
 We learned that in Python, everything is an object.
 
@@ -10,7 +10,7 @@ These namespaces exist in different scales of worlds.
 
 There are 4 different namespaces depending on the scale of its scope.
 
-### Built-in > Global > Enclosed = Local (LEGB rule)
+### Unofficial rule of scope : Built-in > Global > Enclosed = Local (LEGB rule)
 
 Built-in namespaces exist in everywhere as long as we use Python.
 
@@ -172,20 +172,6 @@ First time we print `locals()`, we have only `{'name': 'Jin', 'age': 99}`, which
 and the second time we print `locals()`, we have `{'name': 'Jin', 'age': 99, 
 'will_he_be_successful': <function introduce_myself.<locals>.will_he_be_successful at 0x0000029C5DE89AF0>}`
 
-# NameError is raised when variables are not found in the right hierarchy
-
-For example,
-```py
-def global_function(num1,num2):
-    local_variable = "hello I am local"
-    print(local_variable)
-print(local_variable)
-```
-
-```diff
-- NameError: name 'local_variable' is not defined
-```
-
 # Let's take a look at these examples
 
 <em>global namespaces and local namespaces</em>
@@ -223,4 +209,145 @@ introduce_stocks("APPL",50)
 	price : 50
 	Should I buy? : False
 {'name': 'APPL', 'price': 50, 'Is_buy': False, 'report': '\tname : APPL\n\tprice : 50\n\tShould I buy? : False'}
+```
+
+# NameError is raised when variables are not found in the right hierarchy
+
+For example,
+```py
+def global_function(num1,num2):
+    local_variable = "hello I am local"
+    print(local_variable)
+print(local_variable)
+```
+
+```diff
+- NameError: name 'local_variable' is not defined
+```
+
+# Nested function can access outer function variables(enclosing variables), but not the other way around
+<em>first example</em>
+```py
+def outer_function():
+    outer_variable = "Hello this is enclosing value"
+    def inner_function():
+        print(outer_variable)
+    inner_function()
+outer_function()
+```
+And we get
+```
+Hello this is enclosing value
+
+```
+
+<em>second example</em>
+```py
+def outer_function():
+    outer_variable = "Hello this is enclosing value"
+    def inner_function():
+        print(outer_variable)
+        def second_inner_function():
+            print(outer_variable)
+        second_inner_function()
+    inner_function()
+    
+outer_function()
+```
+we get
+```
+Hello this is enclosing value
+Hello this is enclosing value
+
+```
+
+### But if we tried to access inner variables from outer function, this will raise an error.
+
+```py
+def outer_function():
+    outer_variable = "Hello this is enclosing value"
+    def inner_function():
+        print(second_inner_variable)
+        print(outer_variable)
+        def second_inner_function():
+            second_inner_variable = "World"
+            print(outer_variable)
+        second_inner_function()
+    inner_function()
+    
+outer_function()
+```
+```diff
+- NameError: name 'second_inner_variable' is not defined
+```
+
+# we can't also modify immutable objects such as strings, or numbers
+
+```py
+def outer_function():
+    outer_variable = "Hello this is enclosing value"
+    def inner_function():
+        outer_variable += ", I am going to add some sauce!"
+        print(outer_variable)
+    inner_function()
+    
+outer_function()
+```
+
+```diff
+- UnboundLocalError: local variable 'outer_variable' referenced before assignment
+```
+
+# But if we add `nonlocal outer_variable` we can now even modify outer variables in nested functions.
+
+```py
+def outer_function():
+    outer_variable = "Hello this is enclosing value"
+    
+    def inner_function():
+        nonlocal outer_variable
+        outer_variable += ", I am going to add some sauce!"
+        print(outer_variable)
+    inner_function()
+    
+outer_function()
+```
+```
+Hello this is enclosing value, I am going to add some sauce!
+
+```
+
+# for the similar purpose, we can also modify global variable in a local scope
+
+```py
+global_variable = "Global variables usually can't be changed in a local scope"
+
+def some_function():
+    global_variable = "You are a genius!"
+    
+print(global_variable)
+```
+We get
+```
+Global variables usually can't be changed in a local scope
+
+```
+
+If we add `global variable_name` in a local scope, we are now able to modify this global variable
+
+```py
+global_variable = "Global variables usually can't be changed in a local scope"
+
+def some_function():
+    global global_variable
+    global_variable = "You are a genius!"
+    
+some_function() #we need to call this function first to activate this global function
+
+print(global_variable)
+```
+
+```
+You are a genius!
+
 ```
