Update 6.21 namespaces, scopes, NameError.md

--- a/Today I learned/6.21 namespaces, scopes, NameError.md
+++ b/Today I learned/6.21 namespaces, scopes, NameError.md
@@ -333,7 +333,7 @@ Global variables usually can't be changed in a local scope
 
 ```
 
-If we add `global variable_name` in a local scope, we are now able to modify this global variable
+If we add `global variable_name` in a local scope, we are now able to modify this global variable using `global`
 
 ```py
 global_variable = "Global variables usually can't be changed in a local scope"
