Update 6.21 namespaces, scopes, NameError.md

--- a/Today I learned/6.21 namespaces, scopes, NameError.md
+++ b/Today I learned/6.21 namespaces, scopes, NameError.md
@@ -317,7 +317,7 @@ Hello this is enclosing value, I am going to add some sauce!
 
 ```
 
-# for the similar purpose, we can also modify global variable in a local scope
+# for the similar purpose, we can also modify global variable in a local scope using `global`
 
 ```py
 global_variable = "Global variables usually can't be changed in a local scope"
@@ -333,7 +333,7 @@ Global variables usually can't be changed in a local scope
 
 ```
 
-If we add `global variable_name` in a local scope, we are now able to modify this global variable using `global`
+If we add `global variable_name` in a local scope, we are now able to modify this global variable
 
 ```py
 global_variable = "Global variables usually can't be changed in a local scope"
