Update 6.21 namespaces, scopes, NameError.md

--- a/Today I learned/6.21 namespaces, scopes, NameError.md
+++ b/Today I learned/6.21 namespaces, scopes, NameError.md
@@ -2,13 +2,31 @@
 
 # Namespaces, Scopes, NameError is raised when variables are not found in the right hierarachy
 
+## What is namespace?
+
+We use names for all objects in Python.
+
 We learned that in Python, everything is an object.
+
+```py
+color = "green"
+```
+In this example, we assign `color` as name of the string `"green"`.
+
+In Python, there are even more than thousands of names are used. Python stores all these names in what is called namespace.
+
+Namespace is a collection of names, and objects that are associated with keys.
+
+<em>Example</em>
+```py
+{'color': "green"}
+```
 
 Namespaces are like dictionary with key:value set where key is the name of variables, and value is an object associated with it.
 
 These namespaces exist in different scales of worlds.
 
-There are 4 different namespaces depending on the scale of its scope.
+There are 4 different scales of namespaces depending on the scale of its scope.
 
 ### Unofficial rule of scope : Built-in > Global > Enclosed = Local (LEGB rule)
 
