Update 6.21 namespaces, scopes, NameError.md

--- a/Today I learned/6.21 namespaces, scopes, NameError.md
+++ b/Today I learned/6.21 namespaces, scopes, NameError.md
@@ -120,6 +120,19 @@ Notice that there is `{'name': 'Jin', 'age':99}` which is a namespace for `intro
 
 'name' was defined when we called the function(as an argument), and 'age' was defined as local variable inside the function.
 
+# Also we can guess intuitively that `locals()` in the main python program is actually asking what `globals()` does.
+
+Like,
+```py
+print(locals())
+```
+
+```py
+print(globals())
+```
+are asking the same global namespaces.
+
+Because `locals()` here doesn't really have a local scope, it is in global namespace.
 # <em>Enclosing namespaces or Enclosed namespaces</em>
 
 In the previous example, we took a look at local namespaces.
