Update 6.23 How to be a good enough engineer, and land a job in the US.md

--- a/Today I learned/6.23 How to be a good enough engineer, and land a job in the US.md
+++ b/Today I learned/6.23 How to be a good enough engineer, and land a job in the US.md
@@ -1,5 +1,10 @@
 # 6/23 Today I learned...
-# - 오픈소스를 깃업으로 찾아서 기여
+
+# 어떻게 하면 소프트웨어 엔지니어로 취업이 되는가
+
+# - 오픈소스 프로젝트를 깃헙으로 찾아서 기여
+
+별이 몇천개있는 오픈소스 프로젝트에서도 기여자는 몇명 안된다.
 
 지원할수 있는 껀덕지가 생긴다. 
 
