Update 6.23 How to be a good enough engineer, and land a job in the US.md

--- a/Today I learned/6.23 How to be a good enough engineer, and land a job in the US.md
+++ b/Today I learned/6.23 How to be a good enough engineer, and land a job in the US.md
@@ -10,7 +10,7 @@
 
 <em>-이력서.txt-</em>
 
-`저는 이런곳에서 이러한 오픈소스에 기여를 했습니다` 
+`저는 이런곳에서 이러한 오픈소스 프로젝트에 기여를 했습니다` 
 
 
 그럼에도 불구하고 100군데 지원을 할정도로 첫 취업은 쉽지 않다.
