Update 6.27 Simple way of creating functions.md

--- a/Today I learned/6.27 Simple way of creating functions.md
+++ b/Today I learned/6.27 Simple way of creating functions.md
@@ -48,11 +48,15 @@ but this can be written in like this simply
   
   ```py
   def value_of_card(card):
-      if card in "JQK":
-          return 10
-      elif card in "A":
-          return 1
-      return int(card)
+    
+      if type(card) == str:
+          if card.upper() in "JQK":
+              return 10
+          elif card.upper() in "A":
+              return 1
+
+      else:
+          return int(card)
   ```
   
 </details>
