Update and rename 6.27 Simple way of creating functions.md to 6.27 Simple way of creating functions, enumerate.md

--- a/Today I learned/6.27 Simple way of creating functions, enumerate.md
+++ b/Today I learned/6.27 Simple way of creating functions, enumerate.md
@@ -1,3 +1,8 @@
+# 6/27 Today I learned...
+
+# Better way to create functions, enumerate 
+
+
 Lets suppose that we are given an instruction to create a function.
 
 The instruction is as below,
@@ -64,3 +69,14 @@ but this can be written in like this simply
 we can see that the second one is a lot better.
 
 And I am wondering what it takes to write codes like the second one from being able to write the first code.
+
+---
+# Enumerate
+
+`enumerate` gives both index position and value
+<em>example</em>
+```py
+stocks = ["AAPL","GRPO","WMT"]
+for index_pos, value in enumerate(stocks):
+    print(f"{index_pos} : {value}")
+```
