Update 7.1 More on Strings.md

--- a/Today I learned/7.1 More on Strings.md
+++ b/Today I learned/7.1 More on Strings.md
@@ -2,7 +2,7 @@
 
 # Strings
 
-### Two ways to iterate through a string
+## Two ways to iterate through a string
 
 Strings are just like lists, except that they are immutable,
 
@@ -12,7 +12,7 @@ str1 = "hello"
 print(str1[0])      #
 print(str1[:-1])    #hell
 ```
-<em>First way to iterate string</em>
+### <em>First way to iterate string</em>
 ```py
 str1 = "hello"
 for each_letter in str1:
@@ -27,7 +27,7 @@ l
 o
 ```
 
-<em>Second way to iterate string</em>
+### <em>Second way to iterate string</em>
 ```py
 str2 = "world"
 for index in range(len(str2)):
