Update 7.1 More on Strings.md

--- a/Today I learned/7.1 More on Strings.md
+++ b/Today I learned/7.1 More on Strings.md
@@ -42,3 +42,10 @@ r
 l
 d
 ```
+
+# To find out how many 'love's are in the given sentence, use `.count()`
+
+```py
+a = "lovely love love lovey dovey".count("love")
+print(a)                    #4
+```
