Update and rename 7.1 More on Strings.md to 7.1 More on Strings, lambda.md

--- a/Today I learned/7.1 More on Strings, lambda.md
+++ b/Today I learned/7.1 More on Strings, lambda.md
@@ -49,3 +49,16 @@ d
 a = "lovely love love lovey dovey".count("love")
 print(a)                    #4
 ```
+---
+
+# Lambda function (Anonymous function)
+
+<em>My First Lambda function!</em>
+```py
+add_two = lambda var1: var1 + 2
+```
+This is same as 
+```py
+def add_two(var1):
+    return var1 + 2
+```
