Update 7.1 More on Strings, lambda.md

--- a/Today I learned/7.1 More on Strings, lambda.md
+++ b/Today I learned/7.1 More on Strings, lambda.md
@@ -62,3 +62,9 @@ This is same as
 def add_two(var1):
     return var1 + 2
 ```
+
+# A bit more complex lambda function!(with if statement)
+
+```py
+grade_system = lambda grade: "A" if grade>=90 "B" elif 50<grade<90 else "fail"
+```
