--- a/Today I learned/7.1 More on Strings, lambda.md
+++ b/Today I learned/7.1 More on Strings, lambda.md
@@ -65,6 +65,8 @@ def add_two(var1):
 
 # A bit more complex lambda function!(with if statement)
 
+Create a lambda function that passes if grade is equal or over 50, fails if grade is less than 50
+
 ```py
-grade_system = lambda grade: "A" if grade>=90 "B" elif 50<grade<90 else "fail"
+grade_system = lambda grade: "Pass" if grade >= 50 else "fail"
 ```
