Update 7.2 More on lambda.md

--- a/Today I learned/7.2 More on lambda.md
+++ b/Today I learned/7.2 More on lambda.md
@@ -37,6 +37,7 @@ Grade : 75 Result: Pass - C
 Grade : 90 Result: Pass - A
 ```
 
+*These two functions are the same
 ```py
 grade_system = lambda grade: "Pass - A" if grade >= 90 else ("Pass - B" if 80 <= grade < 90 else("Pass - C" if 70 <= grade < 80 else("Pass - D" if 50 <= grade < 70 else "fail")))
 
