Update 6.21 namespaces, scopes, NameError.md

--- a/Today I learned/6.21 namespaces, scopes, NameError.md
+++ b/Today I learned/6.21 namespaces, scopes, NameError.md
@@ -219,8 +219,8 @@ print(globals())
 ```
 And we get
 ```
-{'x': 10, 'y': 15}
-{'x': 10, 'y': 15, 'addition': <function addition at 0x0000029C5E4BCB80>}
+{'__name__': '__main__', '__doc__': None, '__package__': None, '__loader__': <_frozen_importlib_external.SourceFileLoader object at 0x01A1AF40>, '__spec__': None, '__annotations__': {}, '__builtins__': <module 'builtins' (built-in)>, '__file__': 'c:/Users/daily/Desktop/Coding/Python/git_practice/practice111.py', '__cached__': None, 'x': 10, 'y': 15}
+{'__name__': '__main__', '__doc__': None, '__package__': None, '__loader__': <_frozen_importlib_external.SourceFileLoader object at 0x0116AF40>, '__spec__': None, '__annotations__': {}, '__builtins__': <module 'builtins' (built-in)>, '__file__': 'c:/Users/daily/Desktop/Coding/Python/git_practice/practice111.py', '__cached__': None, 'x': 10, 'y': 15, 'addition': <function addition at 0x011E6FA0>}
 ```
 Variable `c` exists only in local namespace, not in global namespaces.
 
