Update and rename 7.2 More on lambda.md to 7.2 More on lambda function, Type hinting.md

--- a/Today I learned/7.2 More on lambda function, Type hinting.md
+++ b/Today I learned/7.2 More on lambda function, Type hinting.md
@@ -1,6 +1,20 @@
 
 # 7/2 Today I learned...
 
+Type hinting, lamda(anonymous function)
+
+# Type hinting
+
+I have seen things like this
+```py
+def is_pass(grade: int) -> int:
+    return "Pass" if grade >= 50 else "Fail"
+```
+`grade: int` means that this function is hinting at us that it takes int type arguments,
+
+`-> int` means that this will return integer as well
+---
+
 # Lambda function! (More complex lambda function - Multiple conditions)
 
 On 7/1, we learned what lambda function is.
@@ -53,3 +67,4 @@ def grade_systme(grade):
     else:
         return "fail"
 ```
+
