Update 7.2 More on lambda function, Type hinting, Importance of thinking in studying.md

--- a/Today I learned/7.2 More on lambda function, Type hinting, Importance of thinking in studying.md
+++ b/Today I learned/7.2 More on lambda function, Type hinting, Importance of thinking in studying.md
@@ -118,7 +118,7 @@ But if I understand that this state is simply `Knowing what we don't know`, thin
 I tell myself,
 
 1. "I thought I knew lambda function, but it seeems like lambda function  can be used in a different way like this."
-2. "What is this usage? lambda function is now used as an element in a list."
+2. "What is the usage of lambda? Lambda function is now used as an element in a list."
 3. "Since lambda function is just like syntax for creating function in one line, I assume that some other functions can be used like an element in a list."
-4. "Oh I realized that I have never used functions as an element in a list. I should learn that."
+4. "Oh I realized that I have never used functions as an element in a list. I should learn functions as element in a list."
 ```
