Update and rename 5.13 Tuples, zip(), for loop, while loop.py to 5.13 Tuples, zip(), for loop, while loop.md

--- a/Today I learned/5.13 Tuples, zip(), for loop, while loop.md
+++ b/Today I learned/5.13 Tuples, zip(), for loop, while loop.md
@@ -1,22 +1,30 @@
-5/13 Today I learned..
+# 5/13 Today I learned..
 1.
 Tuples
+
 2.
 zip()
+
 3.
 for loop
+
 4.
 while loop
+
 5.
 how to comment on line
 # highlight the line and press CTRL + /
+
 6.
 how to break out of infinite loop
 press CTRL + C
+
 7.break
+
 8.continue
 
 ---Tuples
+```py
 #Creating a Tuple
 stocks = ("AAPL", 147, "Technology")
 
@@ -32,9 +40,11 @@ one_tuple = (4)       #but this will NOT create a tuple
 print(one_tuple)      #4
 one_tuple_real = (4,)
 print(one_tuple_real) #(4,)
+```
+---
+zip()
 
----zip()
-
+```py
 #zip() is used to combine two lists together
 tickersofstocks = ["AAPL","KO","GPRO"]
 namesofstocks = ["APPLE","COCA-COLA","GOPRO"]
@@ -42,6 +52,7 @@ stockstotrade = zip(tickersofstocks,namesofstocks)              #<zip object at 
 #use list() to show list
 stockstotrade = list(stockstotrade)                             #reassign the list of stockstotrade to stockstotrade
 print(stockstotrade)                                            #[('AAPL', 'APPLE'), ('KO', 'COCA-COLA'), ('GPRO', 'GOPRO')] but this is in tuples
+```
 
 ---for loop
 """
