Update 5.13 Tuples, zip(), for loop, while loop.md

--- a/Today I learned/5.13 Tuples, zip(), for loop, while loop.md
+++ b/Today I learned/5.13 Tuples, zip(), for loop, while loop.md
@@ -1,29 +1,24 @@
 # 5/13 Today I learned..
-1.
-Tuples
+### 1. Tuples
 
-2.
-zip()
+### 2. zip()
 
-3.
-for loop
+### 3. for loop
 
-4.
-while loop
+### 4. while loop
 
-5.
-how to comment on line
-# highlight the line and press CTRL + /
+### 5. how to comment on line
+highlight the line and press CTRL + /
 
-6.
-how to break out of infinite loop
+### 6. how to break out of infinite loop
 press CTRL + C
 
-7.break
+### 7.break
 
-8.continue
+### 8.continue
 
----Tuples
+---
+# Tuples
 ```py
 #Creating a Tuple
 stocks = ("AAPL", 147, "Technology")
@@ -38,11 +33,13 @@ print(sector)             #Technology
 #creating 1 element tuple
 one_tuple = (4)       #but this will NOT create a tuple
 print(one_tuple)      #4
+print(type(one_tuple))#<class 'int'>
 one_tuple_real = (4,)
 print(one_tuple_real) #(4,)
 ```
+
 ---
-zip()
+# zip()
 
 ```py
 #zip() is used to combine two lists together
@@ -54,7 +51,10 @@ stockstotrade = list(stockstotrade)                             #reassign the li
 print(stockstotrade)                                            #[('AAPL', 'APPLE'), ('KO', 'COCA-COLA'), ('GPRO', 'GOPRO')] but this is in tuples
 ```
 
----for loop
+---
+# for loop
+
+```py
 """
 basic syntax for for loop
 
@@ -87,8 +87,12 @@ for temp in range(5):
 for temp in range(5):
 #if I want to see what iteration we are on
   print("I will create an amazing product." + str(temp))
-  
----while loop
+```
+
+---
+# while loop
+
+```py
 #while loop
 """
 Basic syntax for while loop is this
@@ -110,9 +114,12 @@ count = 0
 while count < len(stocks):
   print(stocks[count])
   count += 1
-  
----example of finding certain element, example of break
+```
 
+---
+# example of finding certain element, example of break
+
+```py
 stocks = ["AAPL", "KO", "PEP", "GPRO", "KORU", "BABA"]
 
 #if we want to see if GPRO exists in a stocks list
@@ -121,11 +128,21 @@ for i in stocks:
     print(i+ " exists")
     #if we want to break out of the loop we can use break statement, this can be used when we have lots of elements in a list
     break
+```
 
----example of continue
+---
+# example of continue
+```py
 stockstotrade = ["AAPL","KORU","NFLX","KO"]
 #check if stockstotrade list has NFLX and skip it
 for skip in stockstotrade:
-    if skip == "NFLX":
+    if each == "NFLX":
         continue
-    print(skip)
+    print(each)
+```
+This will result in 
+```py
+AAPL
+KORU
+KO
+```
