Update 5.13 Tuples, zip(), for loop, while loop.md

--- a/Today I learned/5.13 Tuples, zip(), for loop, while loop.md
+++ b/Today I learned/5.13 Tuples, zip(), for loop, while loop.md
@@ -135,13 +135,13 @@ for i in stocks:
 ```py
 stockstotrade = ["AAPL","KORU","NFLX","KO"]
 #check if stockstotrade list has NFLX and skip it
-for skip in stockstotrade:
+for each in stockstotrade:
     if each == "NFLX":
         continue
     print(each)
 ```
 This will result in 
-```py
+```
 AAPL
 KORU
 KO
