--- a/Today I learned/7.15 set.md
+++ b/Today I learned/7.15 set.md
@@ -7,40 +7,68 @@ Set is like a dictionary, it has only one element for each.
 
 But items in set are unordered so if order is important, set is not the one to use.
 
-To find if they have common elements
+
 ```py
 a = {1}
 b = {3,2,4}
-print(a.isdisjoint(b))      #False
-```
 
-```py
+# find if they have common elements
+print(a.isdisjoint(b))      #False
+
 c = {1,24,25}
 d = {1,25,24,2}
+
+# find if c is subset of d
 print(c.issubset(d))
 
+# find what elements c and d have in common
 print(c.intersection(d))
 
+# find the union set of c and d
 print(c.union(d))
 
+# get the result of (d - c)
 print(d.difference(c))
 ```
-```py
-lst1 = [1,5,3,23,23,23]
-dic1 = dict.fromkeys(lst1)
-lst1 = list(dic1)
-print(lst1)
+If we want to create a list that doesn't have multiple same elements, but also the order matters.
 
+Let's say we have a list called `a`.
+```py
+a = ['a', 'a', 'a', 'a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']
+```
+If we want to convert this `a` into a set that has only one alphabet each
+```py
+a = ['a', 'a', 'a', 'a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']
+
+b = set(a)
+print(f"b:{b}")
+```
+```
+b:{'l', 'n', 'h', 'u', 'o', 'j', 't', 'w', 'm', 'k', 'a', 'e', 'c', 'g', 'v', 'i', 'r', 's', 
+'d', 'q', 'p', 'z', 'x', 'b', 'f', 'y'}
+```
+But notice that `b` has each item, but the order also changed.
+
+So we have to create a dictionary, and get the list of keys in the dictionary.
+
+Dictionary also has one item for keys, and it has items that are ordered.
+```py
+a = ['a', 'a', 'a', 'a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']
+
+b = dict.fromkeys(a)
+b = list(b)
+
+print(f"b: {b}")
+```
+```
+b: ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']
+```
+Another way to create a list of only one item each, using for loop
+```py
 lst2 = [1,5,3,23,23,23]
 dic2 = {}
 for each in lst2:
     dic2[each] = None
 lst2 = list(dic2)
 print(lst2)
-
-
-lst = [1,3,5,7,9,25]
-set1 = set(lst)
-
-print(set1)
 ```
