--- a/Today I learned/7.15 set.md
+++ b/Today I learned/7.15 set.md
@@ -65,10 +65,24 @@ b: ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', '
 ```
 Another way to create a list of only one item each, using for loop
 ```py
-lst2 = [1,5,3,23,23,23]
-dic2 = {}
-for each in lst2:
-    dic2[each] = None
-lst2 = list(dic2)
-print(lst2)
+a = ['a', 'a', 'a', 'a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']
+dic = {}
+for each in a:
+    dic[each] = None
+b = list(dic)
+print(b)
+```
+or 
+```py
+a = ['a', 'a', 'a', 'a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']
+dic = {}
+for each in a:
+    dic.setdefault(each,None)
+b = list(dic)
+print(b)
+```
+
+Both results in 
+```
+['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']
 ```
