Update 7.16 Pythonic Code.md

--- a/Today I learned/7.16 Pythonic Code.md
+++ b/Today I learned/7.16 Pythonic Code.md
@@ -106,3 +106,59 @@ dic2["space_counts"] = count
 print(dic2)
 ```
 <em>second example</em>
+```py
+introduce = "This is some random sentence. Guess how many times each different character are used in this sentence."
+dic = {}
+for each_char in introduce:
+    dic.setdefault(each_char, introduce.count(each_char))
+print(dic)
+```
+```py
+introduce = "This is some random sentence. Guess how many times each different character are used in this sentence."
+dic2 = {}
+for each_char in introduce:
+    if each_char not in dic2:
+        dic2[each_char] = 0
+    dic2[each_char] += 1
+    
+print(dic2)
+```
+
+## Use multiple assignment operators instead of using `and`
+```py
+a = 15
+if a < 25 and a > 10:
+    print(a)
+```
+```py
+a = 15
+if 10 < a < 25:
+    print(a)
+```
+```
+15
+```
+```
+15
+```
+<em>second example</em>
+```py
+a = 15
+b = 15
+c = 15
+if a == b and b == c:
+    print(f"a, b, c are the same {a},{b},{c}")
+```
+```py
+a = 15
+b = 15
+c = 15
+if a == b == c:
+    print(f"a : {a}, b : {b}, c : {c}")
+```
+```
+a : 15, b : 15, c : 15
+```
+```
+a : 15, b : 15, c : 15
+```
