Update 7.16 Pythonic Code.md

--- a/Today I learned/7.16 Pythonic Code.md
+++ b/Today I learned/7.16 Pythonic Code.md
@@ -105,6 +105,12 @@ for each_char in introduce:
 dic2["space_counts"] = count 
 print(dic2)
 ```
+```
+{'space_counts': 12}
+```
+```
+{'space_counts': 12}
+```
 <em>second example</em>
 ```py
 introduce = "This is some random sentence. Guess how many times each different character are used in this sentence."
@@ -123,7 +129,12 @@ for each_char in introduce:
     
 print(dic2)
 ```
-
+```
+{'T': 1, 'h': 5, 'i': 6, 's': 10, ' ': 16, 'o': 3, 'm': 4, 'e': 15, 'r': 5, 'a': 6, 'n': 8, 'd': 3, 't': 6, 'c': 5, '.': 2, 'G': 1, 'u': 2, 'w': 1, 'y': 1, 'f': 2}
+```
+```
+{'T': 1, 'h': 5, 'i': 6, 's': 10, ' ': 16, 'o': 3, 'm': 4, 'e': 15, 'r': 5, 'a': 6, 'n': 8, 'd': 3, 't': 6, 'c': 5, '.': 2, 'G': 1, 'u': 2, 'w': 1, 'y': 1, 'f': 2}
+```
 ## Use multiple assignment operators instead of using `and`
 ```py
 a = 15
