Update 7.16 Pythonic Code.md

--- a/Today I learned/7.16 Pythonic Code.md
+++ b/Today I learned/7.16 Pythonic Code.md
@@ -26,24 +26,28 @@ These things are the ones I understood.
 ## Readability counts
 Write descriptive names for variables or functions.
 ```py
-a = ["Nabi", 5, "Black"]
-```
-```py
+# Pythonic Code
 my_cat_info = ["Nabi", 5, "Black"]
 ```
+```py
+a = ["Nabi", 5, "Black"]
+```
+
 we can tell which name feels like easier to read.
 
 ## Use `enumerate()` , instead of `range(len())`
+```py
+# Pythonic Code
+my_stocks_list = ["AAPL","NFLX","GOOG"]
+for index, each_stock in enumerate(my_stocks_list):
+    print(index, each_stock)
+```
 ```py
 my_stocks_list = ["AAPL","NFLX","GOOG"]
 for index in range(len(my_stocks_list)):
     print(index, my_stocks_list[index])
 ```
-```py
-my_stocks_list = ["AAPL","NFLX","GOOG"]
-for index, each_stock in enumerate(my_stocks_list):
-    print(index, each_stock)
-```
+
 Although these two example has the same result
 ```
 0 AAPL
@@ -54,6 +58,7 @@ It is preferable to use `enumerate()` instead of old `range(len())` convention. 
 
 ## Use fstring instead of format string methods, or %s specifiers
 ```py
+# Pythonic Code
 name = "Nabi".upper()
 age = 5
 print(f"hello my name is {name}, I am {age} years old.")
@@ -62,6 +67,7 @@ print(f"hello my name is {name}, I am {age} years old.")
 ## For dictionary, use `get()` and `setdefault()`, instead of accessing values by `dictionary_name[key]`
 ### `get()`
 ```py
+#Pythonic Code
 number_of_pets = {"cats":1}
 number_of_dogs = number_of_pets.get("dogs",0)
 number_of_cats = number_of_pets.get("cats",0)
@@ -90,6 +96,7 @@ KeyError: 'dogs'
 ### `setdefault()`
 <em>first example</em>
 ```py
+#Pythonic Code
 introduce = "This is some random sentence. Guess how many spaces are in this sentence."
 dic = {}
 dic.setdefault("space_counts",introduce.count(" "))
@@ -113,6 +120,7 @@ print(dic2)
 ```
 <em>second example</em>
 ```py
+#Pythonic Code
 introduce = "This is some random sentence. Guess how many times each different character are used in this sentence."
 dic = {}
 for each_char in introduce:
@@ -136,14 +144,16 @@ print(dic2)
 {'T': 1, 'h': 5, 'i': 6, 's': 10, ' ': 16, 'o': 3, 'm': 4, 'e': 15, 'r': 5, 'a': 6, 'n': 8, 'd': 3, 't': 6, 'c': 5, '.': 2, 'G': 1, 'u': 2, 'w': 1, 'y': 1, 'f': 2}
 ```
 ## Use multiple assignment operators instead of using `and`
+
 ```py
+#Pythonic Code
 a = 15
-if a < 25 and a > 10:
+if 10 < a < 25:
     print(a)
 ```
 ```py
 a = 15
-if 10 < a < 25:
+if a < 25 and a > 10:
     print(a)
 ```
 ```
@@ -154,18 +164,19 @@ if 10 < a < 25:
 ```
 <em>second example</em>
 ```py
-a = 15
-b = 15
-c = 15
-if a == b and b == c:
-    print(f"a, b, c are the same {a},{b},{c}")
-```
-```py
+# Pythonic Code
 a = 15
 b = 15
 c = 15
 if a == b == c:
     print(f"a : {a}, b : {b}, c : {c}")
+```
+```py
+a = 15
+b = 15
+c = 15
+if a == b and b == c:
+    print(f"a, b, c are the same {a},{b},{c}")
 ```
 ```
 a : 15, b : 15, c : 15
