Update and rename 7.20 Pygame( not allowing diagonal movement).md to 7.20 Pygame( not allowing diagonal movement, What to think of when we create game).md

--- a/Today I learned/7.20 Pygame( not allowing diagonal movement, What to think of when we create game).md
+++ b/Today I learned/7.20 Pygame( not allowing diagonal movement, What to think of when we create game).md
@@ -1,4 +1,83 @@
-Not allowing diagonal movement
+# 7/20 Today I learned...
+
+# What should we think of when we create game
+
+- settings
+    - screen size (surface)
+    ```py
+    width = 1200
+    height = 800
+    screen = pygame.display.set_mode((width, height)
+    ```
+    - background image
+    ```py
+    background_image = pygame.display.load("background.png")
+    ```
+    - font in the game
+    ```py
+    font_size = 36
+    regular_font = pygame.font.Font(None, font_size)
+    ```
+    - caption in the game
+    ```py
+    caption = "Star Shooters"
+    pygame.display.set_caption(caption)
+    ```
+    
+- character
+    - character image (surface)
+    ```py
+    character_image = pygame.image.load("character.png")
+    ```
+    - character size
+    ```py
+    character_size = character_image.get_rect().size    #returns a tuple like (width, height)
+    ```
+    - character position
+    ```py
+    characterX = 550
+    characterY = 360
+    ```
+    - character movement
+    ```py
+    character_speed = 5
+    characterX += character_speed
+    characterY += character_speed
+    ```
+- enemy
+    - enemy size
+    - enemy image
+    - enemy position
+    - enemy movement
+- functionalities
+    - character functionality (fire bullets)
+    - enemy functionality (movement)
+    - collision
+    ```py
+    ```
+- keys
+    - keys
+    ```py
+    heldkeys = set()
+    while True:
+        for event in pygame.event.get():
+            if event.type == pygame.KEYDOWN:
+                if event.key == pygame.K_LEFT:
+                    heldkeys.add("left")
+                if event.key == pygame.K_RIGHT:
+                    heldkeys.add("right")
+            if event.type == pygame.KEYUP:
+                if event.key == pygame.K_LEFT:
+                    heldkeys.remove("left")
+                if event.key == pygame.K_RIGHT
+                    heldkeys.remove("right")
+        for _ in heldkeys:
+            if "left" in heldkeys:
+                characterX -= character_speed
+            if "right" in heldkeys:
+                characterX += character_spreed
+    ```
+# Not allowing diagonal movement
 ```py
 
 import sys
