--- a/Today I learned/7.20 Pygame( not allowing diagonal movement, What to think of when we create game).md
+++ b/Today I learned/7.20 Pygame( not allowing diagonal movement, What to think of when we create game).md
@@ -7,7 +7,7 @@
     ```py
     width = 1200
     height = 800
-    screen = pygame.display.set_mode((width, height)
+    screen = pygame.display.set_mode((width, height))
     ```
     - background image
     ```py
